 - DietPi-Drive_Manager | Improved detection and formatting for NVMe based drives: https://github.com/Fourdee/DietPi/issues/2102

Bug Fixes:
 - DietPi-Config | dietpi-wifi.db code has been optimized, and, also resolves an issue where '/var/lib/dietpi/dietpi-wifi.db' was not generated automatically: https://github.com/Fourdee/DietPi/issues/2087#issuecomment-423836528
 - DietPi-Survey | Resolved an issue where dietpi-survey under mode 1 would not generate the survey file.
 - DietPi-Software | MPD: Now runs under the group 'dietpi' and user 'root', allowing access to music directories when contained on samba networked drives: https://github.com/Fourdee/DietPi/issues/2092
 - DietPi-Software | Fixed an issue where software uninstalls could have failed due to dependant packages. Thanks to @dynobot for reporting this issue: https://github.com/Fourdee/DietPi/issues/2091
 - DietPi-Software | Webservers/PHP: Fixed an issue, where PHP was not installed when a webserver was installed directly via "dietpi-software install 8X".
 - DietPi-Software | Nextcloud: On Jessie systems, no newer version than latest NC13 will be installed, because PHP5 support was dropped with NC14: https://github.com/Fourdee/DietPi/issues/1778#issuecomment-419918372
 - DietPi-Software | MyMPD: Resolved an issue where the service would fail to run: https://github.com/Fourdee/DietPi/issues/2088
 - DietPi-Software | MyMPD: Resolved an issue where the installation would fail, due to a recent MyMPD update with new pre-reqs: https://github.com/Fourdee/DietPi/issues/2088#issuecomment-423852124
 - General | Resolved an issue with Rock64 being unable to run xserver. Please note this device still runs under limited software rendering due to lack of available working drivers/installation method for Debian systems: https://github.com/Fourdee/DietPi/issues/2086
 - General | Resolved an issue with Jessie failing to start networking with preboot script: https://github.com/Fourdee/DietPi/issues/2075
