@@ -3382,64 +3382,13 @@ _EOF_
 
 	WiFi_Monitor_Disable(){
 
-		if [[ -f /etc/systemd/system/dietpi-wifi-monitor.service ]]; then
-
-			systemctl stop dietpi-wifi-monitor.service
-			rm /etc/systemd/system/dietpi-wifi-monitor.service
-			rm /var/lib/dietpi/dietpi-wifi-monitor.sh
-			systemctl daemon-reload
-
-		fi
+		systemctl stop dietpi-wifi-monitor.service
+		systemctl disable dietpi-wifi-monitor.service
 
 	}
 
 	WiFi_Monitor_Enable(){
 
-		cat << _EOF_ > /var/lib/dietpi/dietpi-wifi-monitor.sh
-#!/bin/bash
-{
-URL_PING="$WIFI_GATEWAY"
-ADAPTER="wlan$WIFI_DEV_INDEX"
-TICKRATE=10
-while true
-do
-G_DIETPI-NOTIFY 2 "Checking connnection for: \$ADAPTER"
-ping -I \$ADAPTER -c 1 \$URL_PING
-if (( \$? != 0 )); then
-
-G_DIETPI-NOTIFY 2 "Detected connection loss: \$ADAPTER. Reconnecting"
-ifdown "\$ADAPTER"
-sleep 1
-ifup "\$ADAPTER"
-G_DIETPI-NOTIFY 0 'Completed'
-
-else
-
-G_DIETPI-NOTIFY 0 "Connection \$ADAPTER"
-
-fi
-
-sleep \$TICKRATE
-
-done
-
-exit 0
-}
-_EOF_
-
-		chmod +x /var/lib/dietpi/dietpi-wifi-monitor.sh
-
-		cat << _EOF_ > /etc/systemd/system/dietpi-wifi-monitor.service
-[Unit]
-Description=Monitors loss of WiFi connection and automatically reconnects
-After=network.target network-online.target
-[Service]
-Type=simple
-ExecStart=/bin/bash -c /var/lib/dietpi/dietpi-wifi-monitor.sh
-[Install]
-WantedBy=multi-user.target
-_EOF_
-		systemctl daemon-reload
 		systemctl enable dietpi-wifi-monitor.service
 		G_RUN_CMD systemctl start dietpi-wifi-monitor.service
 
