@@ -1278,6 +1278,10 @@ You should not face any difference by following this advice, no IPv6 addresses w
 			#	myMPD: https://twitter.com/ta11/status/1045978421967421440
 			(( $G_DIETPI_INSTALL_STAGE == 1 )) && /DietPi/dietpi/dietpi-software reinstall 148
 			#-------------------------------------------------------------------------------
+			#Now part of rootfs: https://github.com/Fourdee/DietPi/issues/2103
+			chmod +x /var/lib/dietpi/services/dietpi-wifi-monitor.sh
+			systemctl daemon-reload
+			#-------------------------------------------------------------------------------
 
 		fi
 
