@@ -1,0 +1,8 @@
+[Unit]
+Description=Monitors loss of WiFi connection and automatically reconnects
+After=network.target network-online.target
+[Service]
+Type=simple
+ExecStart=/bin/bash -c /var/lib/dietpi/services/dietpi-wifi-monitor.sh
+[Install]
+WantedBy=multi-user.target
