@@ -15,6 +15,7 @@ Changes / Improvements / Optimizations:
  - DietPi-Drive_Manager | Improved detection and formatting for NVMe based drives: https://github.com/Fourdee/DietPi/issues/2102
 
 Bug Fixes:
+ - DietPi-Config | WiFi-Monitor: Resolved an issue with syntax, and, incorrectly pinging the default gateway, instead of whats assigned to the wlan interface: https://github.com/Fourdee/DietPi/issues/2103
  - DietPi-Config | dietpi-wifi.db code has been optimized, and, also resolves an issue where '/var/lib/dietpi/dietpi-wifi.db' was not generated automatically: https://github.com/Fourdee/DietPi/issues/2087#issuecomment-423836528
  - DietPi-Survey | Resolved an issue where dietpi-survey under mode 1 would not generate the survey file.
  - DietPi-Software | MPD: Now runs under the group 'dietpi' and user 'root', allowing access to music directories when contained on samba networked drives: https://github.com/Fourdee/DietPi/issues/2092
